--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <nav class="navigation">
 
-        <a class="gotoland" href="/pages/new-landscapes.html">
+        <a class="gotoland" href="pages/new-landscapes.html">
 
             <p id="cover-landscapes">
               Landscapes
@@ -24,7 +24,7 @@
     
         </a>
 
-        <a class="gotoport" href="/pages/new-portraits.html">
+        <a class="gotoport" href="pages/new-portraits.html">
 
             <p id="cover-portraits">
               Portraits
@@ -40,7 +40,7 @@
     </nav>
 
 
-      <a class="hello-morten" href="/pages/mortenport.html">
+      <a class="hello-morten" href="pages/mortenport.html">
         <p>
           Morten Spaberg,<br />
           Norwegian<br>
