--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     
         </a>
 
-        <a class="gotoport" href="pages/new-portraits.html">
+        <a class="gotoport" href="/pages/new-portraits.html">
 
             <p id="cover-portraits">
               Portraits
