--- a/pages/new-landscapes.html
+++ b/pages/new-landscapes.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="../style.css" />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <title>Landscapes</title>
   </head>
@@ -47,7 +47,7 @@
 
       <div class="land" data-aos="fade-left">
 
-        <img src="/img/landscapes/1land.jpg" alt="">
+        <img src="../img/landscapes/1land.jpg" alt="">
 
         <span class="fotoname">E16, Begnadalen. 2013</span>
 
@@ -56,7 +56,7 @@
 
       <div class="land" data-aos="fade-left">
 
-        <img src="/img/landscapes/2land.jpg" alt="">
+        <img src="../img/landscapes/2land.jpg" alt="">
 
         <span class="fotoname">Myren Gård, Valdres. 2013</span>
 
@@ -65,7 +65,7 @@
 
       <div class="land" data-aos="fade-left">
 
-        <img src="/img/landscapes/3land.jpg" alt="">
+        <img src="../img/landscapes/3land.jpg" alt="">
 
         <span class="fotoname">Oppsal, Oslo. 2012</span>
 
@@ -74,35 +74,35 @@
 
       <div class="land" data-aos="fade-left">
 
-        <img src="/img/landscapes/4land.jpg" alt="">
+        <img src="../img/landscapes/4land.jpg" alt="">
 
         <span class="fotoname">Oslo. 2012</span>
 
       </div>
       <div class="land" data-aos="fade-left">
 
-        <img src="/img/landscapes/5land.jpg" alt="">
+        <img src="../img/landscapes/5land.jpg" alt="">
 
         <span class="fotoname">Nesodden. 2012</span>
 
       </div>
       <div class="land" data-aos="fade-left">
 
-        <img src="/img/landscapes/6land.jpg" alt="">
+        <img src="../img/landscapes/6land.jpg" alt="">
 
         <span class="fotoname">Filefjell. 2011</span>
 
       </div>
       <div class="land" data-aos="fade-left">
 
-        <img src="/img/landscapes/7land.jpg" alt="">
+        <img src="../img/landscapes/7land.jpg" alt="">
 
         <span class="fotoname">Tronfjell, Alvdal. 2011</span>
 
       </div>
       <div class="land" data-aos="fade-left">
 
-        <img src="/img/landscapes/8land.jpg" alt="">
+        <img src="../img/landscapes/8land.jpg" alt="">
 
         <span class="fotoname">Hvalstad. 2010</span>
 
@@ -111,7 +111,7 @@
 
       <div class="land" data-aos="fade-left">
 
-        <img src="/img/landscapes/9land.jpg" alt="">
+        <img src="../img/landscapes/9land.jpg" alt="">
 
         <span class="fotoname">Oslo. 2008</span>
 
@@ -120,7 +120,7 @@
 
       <div class="land" data-aos="fade-left">
 
-        <img src="/img/landscapes/10land.jpg" alt="">
+        <img src="../img/landscapes/10land.jpg" alt="">
 
         <span class="fotoname">Torshovdalen, Oslo. 2008</span>
 
@@ -129,7 +129,7 @@
 
       <div class="land" data-aos="fade-left">
 
-        <img src="/img/landscapes/11land.jpg" alt="">
+        <img src="../img/landscapes/11land.jpg" alt="">
 
         <span class="fotoname">Trengereid. 2006</span>
 
@@ -138,7 +138,7 @@
 
       <div class="land" data-aos="fade-left">
 
-        <img src="/img/landscapes/12land.jpg" alt="">
+        <img src="../img/landscapes/12land.jpg" alt="">
 
         <span class="fotoname">Vidden, Bergen. 2005</span>
 
@@ -147,7 +147,7 @@
 
       <div class="land" data-aos="fade-left">
 
-        <img src="/img/landscapes/13land.jpg" alt="">
+        <img src="../img/landscapes/13land.jpg" alt="">
 
         <span class="fotoname">Ljosuregga. 2005</span>
 
