--- a/pages/new-portraits.html
+++ b/pages/new-portraits.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="../style.css" />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <title>Portraits Landscapes</title>
   </head>
@@ -46,7 +46,7 @@
 
       <div class="port" data-aos="fade-up" data-aos-anchor-placement="top-center">
 
-        <img src="/img/portraits/1port.jpg" alt="">
+        <img src="../img/portraits/1port.jpg" alt="">
 
         <span class="fotoname">Ebba in Jotunheimen. 2013</span>
 
@@ -55,7 +55,7 @@
 
       <div class="port" data-aos="fade-up">
 
-        <img src="/img/portraits/2port.jpg" alt="">
+        <img src="../img/portraits/2port.jpg" alt="">
 
         <span class="fotoname">Myren Gård, Valdres. 2013</span>
 
@@ -64,7 +64,7 @@
 
       <div class="port" data-aos="fade-up">
 
-        <img src="/img/portraits/3port.jpg" alt="">
+        <img src="../img/portraits/3port.jpg" alt="">
 
         <span class="fotoname">Oppsal, Oslo. 2012</span>
 
@@ -73,35 +73,35 @@
 
       <div class="port" data-aos="fade-up">
 
-        <img src="/img/portraits/4port.jpg" alt="">
+        <img src="../img/portraits/4port.jpg" alt="">
 
         <span class="fotoname">Oslo. 2012</span>
 
       </div>
       <div class="port" data-aos="fade-up">
 
-        <img src="/img/portraits/5port.jpg" alt="">
+        <img src="../img/portraits/5port.jpg" alt="">
 
         <span class="fotoname">Nesodden. 2012</span>
 
       </div>
       <div class="port" data-aos="fade-up">
 
-        <img src="/img/portraits/6port.jpg" alt="">
+        <img src="../img/portraits/6port.jpg" alt="">
 
         <span class="fotoname">Filefjell. 2011</span>
 
       </div>
       <div class="port" data-aos="fade-up">
 
-        <img src="/img/portraits/7port.jpg" alt="">
+        <img src="../img/portraits/7port.jpg" alt="">
 
         <span class="fotoname">Tronfjell, Alvdal. 2011</span>
 
       </div>
       <div class="port" data-aos="fade-up">
 
-        <img src="/img/portraits/8port.jpg" alt="">
+        <img src="../img/portraits/8port.jpg" alt="">
 
         <span class="fotoname">Hvalstad. 2010</span>
 
@@ -110,7 +110,7 @@
 
       <div class="port" data-aos="fade-up">
 
-        <img src="/img/portraits/9port.jpg" alt="">
+        <img src="../img/portraits/9port.jpg" alt="">
 
         <span class="fotoname">Oslo. 2008</span>
 
@@ -119,7 +119,7 @@
 
       <div class="port" data-aos="fade-up">
 
-        <img src="/img/portraits/10port.jpg" alt="">
+        <img src="../img/portraits/10port.jpg" alt="">
 
         <span class="fotoname">Torshovdalen, Oslo. 2008</span>
 
@@ -128,7 +128,7 @@
 
       <div class="port" data-aos="fade-up">
 
-        <img src="/img/portraits/11port.jpg" alt="">
+        <img src="../img/portraits/11port.jpg" alt="">
 
         <span class="fotoname">Trengereid. 2006</span>
 
@@ -137,7 +137,7 @@
 
       <div class="port" data-aos="fade-up">
 
-        <img src="/img/portraits/12port.jpg" alt="">
+        <img src="../img/portraits/12port.jpg" alt="">
 
         <span class="fotoname">Vidden, Bergen. 2005</span>
 
@@ -146,7 +146,7 @@
 
       <div class="port" data-aos="fade-up">
 
-        <img src="/img/portraits/13port.jpg" alt="">
+        <img src="../img/portraits/13port.jpg" alt="">
 
         <span class="fotoname">Ljosuregga. 2005</span>
 
