--- a/pages/new-landscapes.html
+++ b/pages/new-landscapes.html
@@ -40,12 +40,13 @@
     
       <div class="land">
 
-        <span class="book-title">Landscapes</span>
+        <span class="book-title">Landscapes →</span>
 
       </div>
 
+      <!-- data-aos="fade-left" had to be deleted, disabled scroll function -->
 
-      <div class="land" data-aos="fade-left">
+      <div class="land">
 
         <img src="../img/landscapes/1land.jpg" alt="">
 
@@ -54,7 +55,7 @@
       </div>
 
 
-      <div class="land" data-aos="fade-left">
+      <div class="land">
 
         <img src="../img/landscapes/2land.jpg" alt="">
 
@@ -63,7 +64,7 @@
       </div>
 
 
-      <div class="land" data-aos="fade-left">
+      <div class="land">
 
         <img src="../img/landscapes/3land.jpg" alt="">
 
@@ -72,35 +73,35 @@
       </div>
 
 
-      <div class="land" data-aos="fade-left">
+      <div class="land">
 
         <img src="../img/landscapes/4land.jpg" alt="">
 
         <span class="fotoname">Oslo. 2012</span>
 
       </div>
-      <div class="land" data-aos="fade-left">
+      <div class="land">
 
         <img src="../img/landscapes/5land.jpg" alt="">
 
         <span class="fotoname">Nesodden. 2012</span>
 
       </div>
-      <div class="land" data-aos="fade-left">
+      <div class="land">
 
         <img src="../img/landscapes/6land.jpg" alt="">
 
         <span class="fotoname">Filefjell. 2011</span>
 
       </div>
-      <div class="land" data-aos="fade-left">
+      <div class="land">
 
         <img src="../img/landscapes/7land.jpg" alt="">
 
         <span class="fotoname">Tronfjell, Alvdal. 2011</span>
 
       </div>
-      <div class="land" data-aos="fade-left">
+      <div class="land">
 
         <img src="../img/landscapes/8land.jpg" alt="">
 
@@ -109,7 +110,7 @@
       </div>
 
 
-      <div class="land" data-aos="fade-left">
+      <div class="land">
 
         <img src="../img/landscapes/9land.jpg" alt="">
 
@@ -118,7 +119,7 @@
       </div>
 
 
-      <div class="land" data-aos="fade-left">
+      <div class="land">
 
         <img src="../img/landscapes/10land.jpg" alt="">
 
@@ -127,7 +128,7 @@
       </div>
 
 
-      <div class="land" data-aos="fade-left">
+      <div class="land">
 
         <img src="../img/landscapes/11land.jpg" alt="">
 
@@ -136,7 +137,7 @@
       </div>
 
 
-      <div class="land" data-aos="fade-left">
+      <div class="land">
 
         <img src="../img/landscapes/12land.jpg" alt="">
 
@@ -145,7 +146,7 @@
       </div>
 
 
-      <div class="land" data-aos="fade-left">
+      <div class="land">
 
         <img src="../img/landscapes/13land.jpg" alt="">
 
