--- a/pages/new-portraits.html
+++ b/pages/new-portraits.html
@@ -39,7 +39,8 @@
     
       <div class="port">
 
-        <span class="book-title">Portraits</span>
+        <span class="book-title">Portraits<br>
+        ↓</span>
 
       </div>
 
