--- a/pages/new-portraits.html
+++ b/pages/new-portraits.html
@@ -45,7 +45,7 @@
       </div>
 
 
-      <div class="port" data-aos="fade-up" data-aos-anchor-placement="top-center">
+      <div class="port">
 
         <img src="../img/portraits/1port.jpg" alt="">
 
@@ -54,7 +54,7 @@
       </div>
 
 
-      <div class="port" data-aos="fade-up">
+      <div class="port">
 
         <img src="../img/portraits/2port.jpg" alt="">
 
@@ -63,44 +63,38 @@
       </div>
 
 
-      <div class="port" data-aos="fade-up">
-
-        <img src="../img/portraits/3port.jpg" alt="">
+      <div class="port"rc="../img/portraits/3port.jpg" alt="">
 
         <span class="fotoname">Oppsal, Oslo. 2012</span>
 
       </div>
 
 
-      <div class="port" data-aos="fade-up">
-
-        <img src="../img/portraits/4port.jpg" alt="">
+      <div class="port"rc="../img/portraits/4port.jpg" alt="">
 
         <span class="fotoname">Oslo. 2012</span>
 
       </div>
-      <div class="port" data-aos="fade-up">
+      <div class="port">
 
         <img src="../img/portraits/5port.jpg" alt="">
 
         <span class="fotoname">Nesodden. 2012</span>
 
       </div>
-      <div class="port" data-aos="fade-up">
+      <div class="port">
 
         <img src="../img/portraits/6port.jpg" alt="">
 
         <span class="fotoname">Filefjell. 2011</span>
 
       </div>
-      <div class="port" data-aos="fade-up">
+      <div class="port">
 
-        <img src="../img/portraits/7port.jpg" alt="">
-
-        <span class="fotoname">Tronfjell, Alvdal. 2011</span>
+        <img src="../img/portraits/7port.jpg" alt="">>Tronfjell, Alvdal. 2011</span>
 
       </div>
-      <div class="port" data-aos="fade-up">
+      <div class="port">
 
         <img src="../img/portraits/8port.jpg" alt="">
 
@@ -109,7 +103,7 @@
       </div>
 
 
-      <div class="port" data-aos="fade-up">
+      <div class="port">
 
         <img src="../img/portraits/9port.jpg" alt="">
 
@@ -118,7 +112,7 @@
       </div>
 
 
-      <div class="port" data-aos="fade-up">
+      <div class="port">
 
         <img src="../img/portraits/10port.jpg" alt="">
 
@@ -127,7 +121,7 @@
       </div>
 
 
-      <div class="port" data-aos="fade-up">
+      <div class="port">
 
         <img src="../img/portraits/11port.jpg" alt="">
 
@@ -136,7 +130,7 @@
       </div>
 
 
-      <div class="port" data-aos="fade-up">
+      <div class="port">
 
         <img src="../img/portraits/12port.jpg" alt="">
 
@@ -145,7 +139,7 @@
       </div>
 
 
-      <div class="port" data-aos="fade-up">
+      <div class="port">
 
         <img src="../img/portraits/13port.jpg" alt="">
 
