--- a/pages/new-landscapes.html
+++ b/pages/new-landscapes.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../style.css" />
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <title>Landscapes</title>
   </head>
   <body>
@@ -40,7 +39,7 @@
     
       <div class="land">
 
-        <span class="book-title">Landscapes →</span>
+        <span class="book-title">Landscapes ➡︎</span>
 
       </div>
 
@@ -156,19 +155,6 @@
 
 
   </div>
-
-  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-  <script>
-    AOS.init({
-      offset: 200,
-      duration: 1000,
-    });
-  </script>
-
-
-
-
-
 
   </body>
 </html>
