--- a/pages/new-portraits.html
+++ b/pages/new-portraits.html
@@ -61,7 +61,7 @@
       </div>
 
 
-      <div class="port">div>
+      <div class="port">
       
         <img src="../img/portraits/3port.jpg" alt="">
 
